--- a/src/app.css
+++ b/src/app.css
@@ -3,28 +3,39 @@
 @tailwind utilities;
 
 :root {
-    font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:
+    Arial,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
-    body {
-        background: #121212;
-    }
+  body {
+    background: #121212;
+  }
 }
 
 @media (prefers-color-scheme: light) {
-    body {
-        background: #fefefe;
-    }
+  body {
+    background: #fefefe;
+  }
 }
-
 
 /*hide number input arrows*/
-input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-input[type=number] {
-    -moz-appearance: textfield;
+input[type='number'] {
+  -moz-appearance: textfield;
 }
